--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light">
+        <nav class="navbar navbar-expand-lg navbar-light navbar-top">
             <div class="container-fluid">
               <a class="navbar-brand" href="#">JELLYFISH</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -77,6 +77,7 @@
               JELLY FISH
             </h2>
             <P>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit eos aut velit deserunt tempora quisquam ad quae. Perspiciatis laboriosam, pariatur quibusdam quasi necessitatibus, adipisci, excepturi tempora vel sapiente velit explicabo.</P>
+            <button type="button" class="btn">Learn More</button>
           </div>
         </div>
       </div>
