--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- custom -->
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <title>Jelly Fish</title>
 </head>
 
 <body>
