--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
             <!-- <div>Jellyfish</div> -->
           </div>
         </nav>
+        <div class="row bar-right">
+          <div class="col-12"><p>2021 November 10</p></div>
+        </div>
     </header>
     <section class="content">
       <div class="container-lg">
